--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <img class="logo" src="./images/logo.png" alt="logo">
             <ul>
                 <li class="list-item"><a class="list" href="#container">Home</a></li>
-                <li class="list-item"><a class="list" href="#about">About</a></li>
+                <li class="list-item"><a class="list" href="#about">About Me</a></li>
                 <li class="list-item"><a class="list" href="#skill">Skill</a></li>
-                <li class="list-item"><a class="list" href="#contact">contact</a></li>
+                <li class="list-item"><a class="list" href="#contact">contacts</a></li>
             </ul>
         </nav>
         <!-- home -->
